Prevent long URLs in quotes and bodies causing overflow
Set a maximum width on the annotation content to prevent it overflowing
the card and set `overflow-wrap` on annotation quotes and bodies so that
long words without any natural breakpoints are broken in the middle if
necessary to prevent overflow.

Fixes #3421

--- a/h/static/styles/annotation-thread.scss
+++ b/h/static/styles/annotation-thread.scss
@@ -39,6 +39,9 @@ li:first-child .annotation-thread--top-reply {
 
 .annotation-thread__content {
   flex-grow: 1;
+
+  // Prevent annotation content from overflowing the container
+  max-width: 100%;
 }
 
 // Darken expand/collapse toggle when an annotation is hovered. This is only
